<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/size_similar_movie_card"
    android:layout_height="@dimen/size_similar_movie_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:stateListAnimator="@animator/animator_scale_pressed_button"
    app:cardCornerRadius="@dimen/radiu_similar_movie_card"
    android:layout_marginStart="@dimen/margin_movies_details_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/dark_blue"
        android:src="@drawable/ic_loading_small"
        android:contentDescription="@string/poster"
        android:foreground="@drawable/gradient_lower_transparent_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_similar_movie_default"
            android:layout_marginEnd="@dimen/margin_similar_movie_small"
            android:text="@string/placeholder_movie_title"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_similar_movie"
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="@dimen/size_rating_star_small"
            android:layout_height="@dimen/size_rating_star_small"
            android:contentDescription="@string/rating_star"
            app:srcCompat="@drawable/ic_full_star"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_similar_movie_small"
            android:fontFamily="@font/proxima_nova_alt_bold"
            android:text="@string/placeholder_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_similar_movie_small"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="@+id/iv_star" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>