<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_short">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_category_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="110dp"
                android:text="Category"
                android:textColor="@color/white"
                android:textSize="22sp">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <FrameLayout
                android:id="@+id/fl_state_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_loading"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/loading"
                    android:src="@drawable/ic_loading"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txt_no_elements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/margin_movies_details_default"
                    android:textSize="@dimen/size_text_movies_details_subinfo"
                    android:textColor="@color/text_grey"
                    android:text="@string/no_movie_found"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txt_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/margin_movies_details_default"
                    android:textSize="@dimen/size_text_movies_details_subinfo"
                    android:textColor="@color/text_grey"
                    android:text="@string/loading_content"
                    android:visibility="invisible" />

            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>